Bug 588287 - SVG SMIL: Fix reparenting animation to younger time container; r=dholbert; a=blocking-final